--- a/src/Status/StateTable.css
+++ b/src/Status/StateTable.css
@@ -38,10 +38,13 @@
     /* width: 300px; */
 }
 .input1, .input2 , .input3{
-    display: block;
+    /* display: block; */
+    width: 200px;
+    flex: 2;
     margin: auto;
     margin-top: 5px;
     margin-bottom: 5px;
+    margin-right: 100px;
     padding: 10px;
     border: none;
     border-radius: 10px;
@@ -79,4 +82,15 @@
 }
 .adding-btn:hover{
     background-color: lightblue;
+}
+
+.input-div{
+    display: flex;
+    gap: 10px;
+}
+.input-div label{
+    width: 200px;
+    margin: auto;
+    flex: 1;
+    text-align: right;
 }
